err/analyticmicroservice.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AnalyticMicroService'...
Listing './lib/python3.5/site-packages/AnalyticMicroService/cli'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/cli/AMSCommandLine.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/cli/AMSCommandLine.py", line 24
    print 'ERROR AMSCommandLine.py Requires a AMSCommandLineConfig.json '
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AnalyticMicroService/cli/modules'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/cli/modules/AMSCommandRunner.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/cli/modules/AMSCommandRunner.py", line 54
    except ValueError, v:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AnalyticMicroService/cli/modules/AMSCommandRunnerConfig.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/cli/modules/AMSCommandRunnerConfig.py", line 45
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AnalyticMicroService/cli/tests'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/cli/tests/TestCommandLine.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/cli/tests/TestCommandLine.py", line 70
    except (RequestException, ValueError), c:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AnalyticMicroService/examples'...
Listing './lib/python3.5/site-packages/AnalyticMicroService/examples/ACExample1'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/examples/ACExample1/ACExample1.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/examples/ACExample1/ACExample1.py", line 39
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AnalyticMicroService/examples/ACExample1/RunACExample1.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/examples/ACExample1/RunACExample1.py", line 46
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AnalyticMicroService/server'...
Listing './lib/python3.5/site-packages/AnalyticMicroService/server/app'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/server/app/AMSapp.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/server/app/AMSapp.py", line 50
    print 'ERROR AMSApp.py unable to read config file'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AnalyticMicroService/server/modules'...
Listing './lib/python3.5/site-packages/AnalyticMicroService/server/routes'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/server/routes/AMSSimpleRoute.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/server/routes/AMSSimpleRoute.py", line 16
    print request.form['data']
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AnalyticMicroService/server/tests'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/server/tests/TestAMSServer.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/server/tests/TestAMSServer.py", line 109
    except OSError, ose:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AnalyticMicroService/server/utils'...
Compiling './lib/python3.5/site-packages/AnalyticMicroService/server/utils/AMSSingletons.py'...
***   File "./lib/python3.5/site-packages/AnalyticMicroService/server/utils/AMSSingletons.py", line 25
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AnalyticMicroService-0.23.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
